Fixed bug involving overly large pickachu image, and removed some redundant code

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,12 @@ block content
     img#pikachuImg(src= '../images/pikachu.png', alt = 'A picture of Pikachu')
     <br>
     <br>
+    <br>
   
-    a.noColor(href= '/yourpath') <button class="button" style="vertical-align:middle"><span>Calculate My Path </span>
+    a.noColor(href= '/yourpath') <button class="button" style="vertical-align:middle"><span>Calculate My Path </span></button>
+    <br>
+    <br>
+    <br>
+    <br>
 
     
