Zeraora Added as Pokemon in Database

--- a/views/your_path_results.pug
+++ b/views/your_path_results.pug
@@ -5,9 +5,9 @@ block content
     h1.underline= title
 
     if pokemon_count > 0
-      p.results Based on the games you selected you are #[em able] to obtain <span class= 'bold'> #{806 -15 - pokemon_count} </span> out of 806 total Pokémon
+      p.results Based on the games you selected you are #[em able] to obtain <span class= 'bold'> #{807 - 16 - pokemon_count} </span> out of 806 total Pokémon
       p.results You are #[em unable] to obtain <span class='bold'> #{pokemon_count} </span> Pokémon through in-game means, that can be obtained in other games.
-      p.results Additionally there are currently 15 event only Pokémon that cannot be obtained outside of official Nintendo events.
+      p.results Additionally there are currently 16 event only Pokémon that cannot be obtained outside of official Nintendo events.
 
       h3 Here is a list of games that we recommend to help you complete your journey to catch'em all:
 
