Removed Commented out your_path_post. Added My Account Page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,5 +16,6 @@ html
         a(href="/yourpath") Your Path to Catch'em All
         a(href="/newplayers") New Players
         a(href="/about") About
+        a(href="/myaccount") My Account
 
   block content
