--- a/views/your_path.pug
+++ b/views/your_path.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div.maintext
-    h1= title
+    h1 Which Pokémon are you missing?
     
     h3 Which games do you own?
     img#jigglypuff(src = '../images/jigglypuff.png', alt = 'Pixelated Picture of Jigglypuff')
