Added string localized in 10 most common languages

--- a/views/my_account.pug
+++ b/views/my_account.pug
@@ -33,6 +33,11 @@ block content
       <br>
       //Actual date for dateAndTime <span> will be inserted directly from myAccountScripts.js
       p <span class="underline"> Today's date and local time</span><span id="dateAndTime">:  </span>
+
+    div
+      <br>
+      //This is where the localized string will go. The string that varies based on the users language settings
+      p#localizedString
       
 
 
