Renamed variables and added comments. Removed code smells.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -214,3 +214,9 @@ p.results {
   font-weight: bold;
 }
 
+/*This is for the textboxList on your_path.pug*/
+.textboxList {
+  display: inline;
+  padding-right:10px;
+}
+
