--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title pokemon-path
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -13,9 +13,10 @@ html
   block topnavbar
       div.topnav 
         a(href="/") Home
+        a(href="/myaccount") My Account
         a(href="/yourpath") Your Path to Catch'em All
         a(href="/newplayers") New Players
         a(href="/about") About
-        a(href="/myaccount") My Account
+  //Hello Fellow Developer!
 
   block content
