--- a/views/your_path.pug
+++ b/views/your_path.pug
@@ -11,7 +11,7 @@ block content
       div.form-group 
         label Games:
         div
-          div(style='display: inline; padding-right:10px;')
+          div.textboxList
             input.checkbox-input(type='checkbox', name='ultra_sun', id="ultraSunBox", value='ultra_sun')
             label Ultra Sun
             <br>
