--- a/views/pokemon_id_search.pug
+++ b/views/pokemon_id_search.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   div.maintext 
     
-    div#IdAndName
+    div.centered
 
       h3 Pokémon Name: #{pokemon_name}
 
