Finished adding limited localization and option to select which language you prefer

--- a/views/my_account.pug
+++ b/views/my_account.pug
@@ -5,7 +5,7 @@ block content
     h1 My Account
 
     //-This div only shows up if the user hasn't entered their name in the form yet
-    div#nameForm
+    div#accountForm
 
       p Enter your name and preferred language below to help customize your Pokémon path. Your name will then appear on various parts of the website.
       <br>
@@ -49,14 +49,14 @@ block content
       //-JavaScript will replace the "user" below with the actual username 
       h2#welcomeUserText Welcome, user!
       <br>
+      //-userLangText is inputted from JavaScript
+      p#userLangBlock <span id="userLangText" class="bold"></span> is set as your preferred language.
+      //-This note will change if the user has set their preferred language as browser default. 
+      p <span class="underline">Please note</span>: <span id="noteAboutTranslations">This web application does not support full translations for any languages outside of English. The only sentence that changes based on your selected language preference is the sentence at the very bottom of this web page. This sentence will normally show up in whatever language you have listed as your primary language in your browser settings (you can see what language you currently have listed as your browser language at the bottom of this webpage). However, the language you select as part of your account information will override this.</span>
       <br>
-      p Your preferred language is currently set to <span id="userLangText" class="bold">
-      p#noteAboutTranslations Please note: This web application does not actually support full translations for any languages outside of English. The only sentence that changes based on your selected language preference is the sentence at the very bottom of this web page. This sentence will normally show up in whatever language you have listed as your primary language in your browser settings (you can see what language you currently have listed as your browser language at the bottom of this webpage). However, the language you selected as part of your account information will override this.
       button.btn.btn-primary(type='submit') Clear Account Data
 
     div.centered
-      <br>
-      <br>
       <br>
       <br>
       <br>
@@ -67,7 +67,8 @@ block content
       //-This is where the localized string will go. The string that varies based on the users language settings
       p#localizedString
       //-The browserLanguagePref span and the notTranslatedWarning span will both be filled in by clientSide JavaScript
-      p#browserLangBlock Your browser currently uses <span id="browserLangText" class="bold"></span> as its preferred language. <span id="notTranslatedWarning"></span>
+      p#browserLangBlock Your browser currently uses <span id="browserLangText" class="bold"></span> as its preferred language. 
+      p <span id="notTranslatedWarning"></span>
       
 
 
