Made changes to the index.pug main page

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,14 +5,16 @@ block content
   div.maintext
     h1 Which games do I need to catch all the Pokémon?
 
-    p In 1996 when there were only two Pokémon games out, this was an easier question to answer. Skip forward 22 years and 29 core-series games later, and suddenly the solution doesn’t seem so easy to find anymore. Each game has its own unique set of Pokémon that you can obtain through capturing, evolving, breeding or receiving. Its been the childhood dream of many a kid to finally be able to Catch’em all, but just what is the best way to go about doing that?
+    p In 1996 when there were only two Pokémon games out, this was an easier question to answer. Skip forward 23 years and 29 core-series games later, and suddenly the solution doesn’t seem so easy to find anymore. Each game has its own unique set of Pokémon that you can obtain through capturing, evolving, breeding or receiving. Its been the childhood dream of many a kid to finally be able to Catch’em all, but just what is the best way to go about doing that?
   
-    p That’s where we come in. At Path to Catch’em All we will use the games you already have to calculate:
+    p The answer to this question becomes even more complicated since the optimal path to catch every Pokémon changes based on which games you have already purchased. Finding out which game you need to purchase next to net you the most new Pokémon can be a real pain if you are doing it by looking through tables and charts of which Pokémon were available in which games.
+
+    p Luckily I have made things a little bit easier for you. By clicking the big red button at the bottom of this page you will be taken to a Pokémon path calculator. It will take the games you currently own, and calculate:
 
     ul
-      li How many Pokémon you can obtain in game through capturing, evolving, breeding, or receiving.
-      li A list of which Pokémon you CAN obtain in game through capturing, evolving, breeding, or receiving.
-      li And finally, we will let you know which game you should buy to net you the most new Pokémon, based on the games you already have.
+      li How many Pokémon you can obtain in-game (through capturing, breeding, receiving,  or evolving) from your current set of games. 
+      li A list of Pokémon you cannot obtain in-game through your current set of games. 
+      li A customized list of games that will net you the most new Pokémon, based on the current set of games you own.
     img#pikachuImg(src= '../images/pikachu.png', alt = 'A picture of Pikachu')
     <br>
     <br>
