--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 
 block content
-  div.maintext
+  div.maintext.widerSpacing
     h1 Which games do I need to catch all the Pokémon?
 
     p In 1996 when there were only two Pokémon games out, this was an easier question to answer. Skip forward 23 years and 29 core-series games later, and suddenly the solution doesn’t seem so easy to find anymore. Each game has its own unique set of Pokémon that you can obtain through capturing, evolving, breeding or receiving. Its been the childhood dream of many a kid to finally be able to Catch’em all, but just what is the best way to go about doing that?
