--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
   block body
     body
       header
-        h1#websiteHeader #[em Path to Catch'em All]
+        h1#websiteHeader #[em My Pokémon Path]
           img#eeveeImg(src = '../images/eevee.png' alt = 'A Picture of Eevee')
   block topnavbar
       div.topnav 
