--- a/views/new_players.pug
+++ b/views/new_players.pug
@@ -17,7 +17,7 @@ block content
       li X or Y
       li Crystal (3DS Virtual Console)
     
-    p <span class = 'underline'>Note</span>: If you purchase Pokémon X you must unlock access to the Dark and Fairy Friend Safari Zones. If you purchase Y you must unlock access to the Fighting and Fairy Friend Safari Zones.
+    p <span class = 'underline'>Note</span>: If you purchase Pokémon X you must unlock access to the Dark and Fairy Friend Safari Zones. If you purchase Pokémon Y you must unlock access to the Fighting and Fairy Friend Safari Zones.
 
     p These can be played in any order, however I would personally recommend starting with either Ultra Sun or Ultra Moon, as these are the games that are currently receiving special event Pokémon.
 
