--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,9 +13,12 @@ body {
   background-color: white;
   font-size: 1.1em;
 }
-/*END OF MAINTEXT
+/*END OF MAINTEXT*/
 
-
+/*Code to increase line height*/
+.widerSpacing {
+  line-height: 1.5em;
+}
 
 /*Code for the website main header*/
 #websiteHeader {
