Edited about.pug text

--- a/views/my_account.pug
+++ b/views/my_account.pug
@@ -52,7 +52,7 @@ block content
       //-userLangText is inputted from JavaScript
       p#userLangBlock <span id="userLangText" class="bold"></span> is set as your preferred language.
       //-This note will change if the user has set their preferred language as browser default. 
-      p <span class="underline">Please note</span>: <span id="noteAboutTranslations">This web application does not support full translations for any languages outside of English. The only sentence that changes based on your selected language preference is the sentence at the very bottom of this web page. This sentence will normally show up in whatever language you have listed as your primary language in your browser settings (you can see what language you currently have listed as your browser language at the bottom of this webpage). However, the language you select as part of your account information will override this.</span>
+      p.widerSpacing <span class="underline">Please note</span>: <span id="noteAboutTranslations">This web application does not support full translations for any languages outside of English. The only sentence that changes based on your selected language preference is the sentence at the very bottom of this web page. This sentence will normally show up in whatever language you have listed as your primary language in your browser settings (you can see what language you currently have listed as your browser language at the bottom of this webpage). However, the language you select as part of your account information will override this.</span>
       <br>
       button.btn.btn-primary(type='submit') Clear Account Data
 
