--- a/views/new_players.pug
+++ b/views/new_players.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .maintext
+  .maintext.widerSpacing
     h1 Quickest Path to Catch'em All for New Players
 
     p If you are just getting started on your Pokémon journey, there is an optimal order to play the Pokémon games in. The Pokémon path calculator on this website assumes that you are not making any trades with other players except for trades that are necessary to evolve a Pokémon like Haunter to Gengar. Without this assumption you would only need one game to catch’em all: either Ultra Sun or Ultra Moon, because theoretically some generous person could trade one of every Pokémon to you tomorrow, and your journey to catch’em all would be complete. However, this is both an unlikely scenario, and would also take must of the fun out of the game.
