Moved JavaScript client-side files

--- a/views/my_account.pug
+++ b/views/my_account.pug
@@ -73,5 +73,5 @@ block content
 
 
   script
-    include clientside-js/moment.js
-    include clientSide-js/myAccountScripts.js
+    include moment.js
+    include myAccountScripts.js
