changed your_path_results.pug so that it would work with heroku

--- a/views/your_path_results.pug
+++ b/views/your_path_results.pug
@@ -47,4 +47,4 @@ block content
       img#happyPikachu(src='../images/happy_pikachu.png', alt = 'A picture of a happy Pikachu with hearts')
 
   script
-    include clientSide-js/yourPathResults.js
+    include yourPathResults.js
